--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
           <p>As a self-taught UX Designer, I pride myself on being a continuous learner and am constantly seeking new sources to inspire me and challenge my way of thinking.  Combining my knowledge of Design Thinking with my business background, one of my greatest strengths is implementing design strategies that target growth levers aligned with business objectives.</p>
           <p>I am currently a UX Designer for the Texas Natural Resources Information System, designing applications to enable users to access geospatial data for the state of Texas. I have previously served as a Teaching Assistant at the UX/UI Boot Camp at the University of Texas at Austin and now am a member of the UX Instructional Staff at Georgia Tech.</p>
           <br><br>
-          <p><a href="#" class="readmore">Download my resume</a> <a href="mailto: ldsmithson@yahoo.com" class="readmore">Send me an e-mail</a></p>  
+          <p><a href="assets/img/LoganSmithson-Resume.pdf" class="readmore">Download my resume</a> <a href="mailto: ldsmithson@yahoo.com" class="readmore">Send me an e-mail</a></p>  
         </div>
 
           <div class="col-md-5 mb-5 mb-md-0" data-aos="fade-up">
