--- a/dh.html
+++ b/dh.html
@@ -67,7 +67,7 @@
                 <div class="mb-5">
                   <p>TNRIS DataHub is a platform for making Texas geospatial data available to the public. When hired in September 2020, my mission was to overhaul the outdated version of DataHub to something more intuitive and modern.</p>
                 </div>
-                <p>What I did</p>
+                <p>What I did:</p>
                 <ul class="list-unstyled list-line mb-5">
                   <li>Created and faciliated survey to gather data</li>
                   <li>Conducted interviews to gather in-depth qualitative feedback</li>
