--- a/septrio.html
+++ b/septrio.html
@@ -68,7 +68,7 @@
 
                 <p>As a UX Designer, I assisted with wireframing and early UI concepts for a Proof of Concept to help Septrio bid for a government contract. This application aims to allow residents and businesses to make 3D models of their communities to share information, explore areas, play games, and more.</p>
 
-                <p><a href="http://septrio.com/" target="_blank" class="readmore">Visit Website</a></p>
+                <p><a href="https://septrio.com/" target="_blank" class="readmore">Visit Website</a></p>
                 <br><br>
               </div>
             </div>
