--- a/tnris.html
+++ b/tnris.html
@@ -71,7 +71,7 @@
                   </ul>
   
 
-                <p><a href="http://www.tnris.org/" target="_blank" class="readmore">Visit Website</a></p>
+                <p><a href="https://www.tnris.org/" target="_blank" class="readmore">Visit Website</a></p>
                 <br><br>
               </div>
             </div>
