--- a/homemix.html
+++ b/homemix.html
@@ -231,7 +231,7 @@
         </div>
     </div>
 
-        <p><a href="http://phixel.com/" class="readmore">Visit Website</a></p>
+        <p><a href="https://phixel.com/" class="readmore">Visit Website</a></p>
         <br><br>
 
     </section>
