--- a/phixel.html
+++ b/phixel.html
@@ -68,7 +68,7 @@
 
                 <p>As a UX Designer, I evaluated the existing platform and made recommendations for usability improvements, collaborating with developers to design best possible solutions and prioritze issues. Enhancements included overhauling navigation menu and simplifying icon usage, color coding map sections to highlight storm damage areas, streamlining the "add task" flow, and more.</p>
 
-                <p><a href="http://phixel.com/" class="readmore">Visit Website</a></p>
+                <p><a href="https://phixel.com/" class="readmore">Visit Website</a></p>
                 <br><br>
               </div>
               <br><br>
