--- a/dh.html
+++ b/dh.html
@@ -77,7 +77,7 @@
                 </ul>
 
                 <p>The beta version was just launched and we plan to begin early testing soon.</p>
-                <p><a href="mailto: ldsmithson@yahoo.com target="_blank" class="readmore">Contact me to see Private Beta</a> <a href="https://data.tnris.org/" target="_blank" class="readmore">Original DataHub</a></p>
+                <p><a href="mailto: ldsmithson@yahoo.com" target="_blank" class="readmore">Contact me to see Private Beta</a> <a href="https://data.tnris.org/" target="_blank" class="readmore">Original DataHub</a></p>
                 <p></p>
 
               </div>           
