--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
           <div class="col-md-6 ml-auto order-2" data-aos="fade-up">
           <p>I am someone who is passionate about using technology to create innovative experiences that shape our world. I am fascinated by learning how human psychology and cognition influence the way we interact with technology. My mission is to create empathy-driven designs by applying my knowledge of UX principles while remaining endlessly curious about the user’s needs.</p>
           <p>As a self-taught UX Designer, I pride myself on being a continuous learner and am constantly seeking new sources to inspire me and challenge my way of thinking.  Combining my knowledge of Design Thinking with my business background, one of my greatest strengths is implementing design strategies that target growth levers aligned with business objectives.</p>
-          <p>I am currently a UX Designer at Oracle, where I design networking services. I also currently mentor students in Chegg's UX Boot Camp and I have previously served as a member of the UX Instructional Staff for the UX/UI Boot Camps at the University of Texas at Austin at Georgia Tech.</p>
+          <p>I am currently a UX Designer at Oracle, where I design networking services for Oracle Cloud Infrastructure. I also currently mentor students in Chegg's UX Boot Camp and have previously served as a member of the UX Instructional Staff for the UX/UI Boot Camps at the University of Texas at Austin at Georgia Tech.</p>
           <br><br>
           <p><a href="assets/img/LoganSmithson-Resume.pdf" class="readmore fbut">Download my resume</a> <a href="mailto: ldsmithson@yahoo.com" class="readmore">Send me an e-mail</a></p>  
         </div>
