--- a/about.html
+++ b/about.html
@@ -52,11 +52,12 @@
 
         <div class="row">
           <div class="col-md-6 ml-auto order-2" data-aos="fade-up">
-          <p>I am someone who is passionate about using technology to create innovative experiences that shape our world. I am fascinated by learning how human psychology and cognition influence the way we interact with technology. My mission is to create empathy-driven designs by applying my knowledge of UX principles while remaining endlessly curious about the user’s needs.</p>
-          <p>As a self-taught UX Designer, I pride myself on being a continuous learner and am constantly seeking new sources to inspire me and challenge my way of thinking.  Combining my knowledge of Design Thinking with my business background, one of my greatest strengths is implementing design strategies that target growth levers aligned with business objectives.</p>
-          <p>I am currently a UX Designer at Oracle, where I design networking services for Oracle Cloud Infrastructure. I also currently mentor students in Chegg's UX Boot Camp and have previously served as a member of the UX Instructional Staff for the UX/UI Boot Camps at the University of Texas at Austin and Georgia Tech.</p>
+          <p>Hi, I’m Logan. Does anyone actually read these? Are we all just putting our own spin on some variation of a corporate jargon template? Well, since you’re here…</p>
+          <p>I’m a seasoned UX Designer with a passion for crafting exceptional digital experiences that bridge the gap between technology and human interaction. With 5 years of industry experience, I've had the privilege of working on diverse projects across various domains, from enterprise software to consumer apps. My approach to UX design is rooted in empathy and a deep understanding of user needs. I believe that the most successful designs arise from the fusion of user-centric research, creative problem-solving, and a keen eye for aesthetic detail.</p>
+          <p>I genuinely enjoy collaborating with teams and believe that creating amazing user experiences can be an adventure rather than a chore. So, if you're seeking a UX designer who not only possesses the skills above but also brings a fun and approachable spirit to the table, let's chat! I'm here to make the world of UX design not just effective but enjoyable.</p>
+          <p>My ideal role is one where I can actively contribute to innovative technology while having a significant impact and a voice in the process. Feel free to explore my projects, and if you're interested in collaborating or have any questions, don't hesitate to reach out. I look forward to connecting and discussing how we can create exceptional user experiences together.</p>
           <br><br>
-          <p><a href="assets/img/LoganSmithson-Resume.pdf" class="readmore fbut">Download my resume</a> <a href="mailto: ldsmithson@yahoo.com" class="readmore">Send me an e-mail</a></p>  
+          <p><a href="mailto: ldsmithson@yahoo.com" class="readmore">Send me an e-mail</a></p>  
         </div>
 
           <div class="col-md-5 mb-5 mb-md-0" data-aos="fade-up">
