--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
         </div>
 
           <div class="col-md-5 mb-5 mb-md-0" data-aos="fade-up">
-            <p><img src="assets/img/img-profile.png" alt="Image" class="img-fluid"></p>
+            <p><img src="assets/img/profpic23.jpg" alt="Image" class="img-fluid"></p>
             
           </div>
 
