--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
           <p>I’m a seasoned UX Designer with a passion for crafting exceptional digital experiences that bridge the gap between technology and human interaction. With 5 years of industry experience, I've had the privilege of working on diverse projects across various domains, from enterprise software to consumer apps. My approach to UX design is rooted in empathy and a deep understanding of user needs. I believe that the most successful designs arise from the fusion of user-centric research, creative problem-solving, and a keen eye for aesthetic detail.</p>
           <p>I genuinely enjoy collaborating with teams and believe that creating amazing user experiences can be an adventure rather than a chore. So, if you're seeking a UX designer who not only possesses the skills above but also brings a fun and approachable spirit to the table, let's chat! I'm here to make the world of UX design not just effective but enjoyable.</p>
           <p>My ideal role is one where I can actively contribute to innovative technology while having a significant impact and a voice in the process. Feel free to explore my projects, and if you're interested in collaborating or have any questions, don't hesitate to reach out. I look forward to connecting and discussing how we can create exceptional user experiences together.</p>
+          <p>Hobbies/interests: basketball, live stand-up comedy, and video games</p>
           <br><br>
           <p><a href="mailto: ldsmithson@yahoo.com" class="readmore">Send me an e-mail</a></p>  
         </div>
