--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="oracle.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Oracle Cloud Infrastructure</h3>
+                <span>Application Design</span>
+              </div>
+              <img class="img-fluid" src="assets/img/img-oracle.png">
+            </a>
+          </div>
+          <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="dh.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>DataHub 2.0</h3>
