--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h3>Oracle Cloud Infrastructure</h3>
                 <span>Application Design</span>
               </div>
-              <img class="img-fluid" src="assets/img/img-oracle.png">
+              <img class="img-fluid" src="assets/img/oracle.png">
             </a>
           </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
