--- a/oracle.html
+++ b/oracle.html
@@ -44,9 +44,9 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <h2>Georgia Institute of Technology</h2>
-            <h4>UX/UI Boot Camp Instructional Staff</h4>
-            <p>June 2020 - Present </p>
+            <h2>Oracle Cloud Infrastructure</h2>
+            <h4>UX Designer</h4>
+            <p>September 2021 - Present </p>
           </div>
         </div>
       </div>
@@ -55,25 +55,25 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-6" data-aos="fade-up">
-              <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=889&q=80" alt="Image" class="img-fluid">
+              <img src="assets/img/oci.png" alt="Image" class="img-fluid">
             </div>
                 
             <div class="col-md-4 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
-                <h3 class="h3">24-week immersive program preparing students for a career in UX/UI</h3>
+                <h3 class="h3">Oracle Cloud Infrastructure</h3>
 
                 <div class="mb-6">
-                    <p>What I did: </p>
+                    <p>Contributed to: </p>
                   </div>
 
                 <ul class="list-unstyled list-line mb-6">
-                  <li>Evaluated homework assignments and projects</li>
-                  <li>Provided in-depth feedback to help students pinpoint areas for growth</li>
-                  <li>Flagged inconsistencies in curriculum and recommend improvements</li>
-                  <li>Provided mentorship and guidance</li>
+                  <li>18 service projects, including net-new services and feature enhancements (15 shipped to production)
+                  <li>2 Internal tools for education and planning</li>
+                  <li>Creation of new design system from the ground up</li>
+                  <li>Competitive analysis of top cloud platforms</li>
                 </ul>
 
-                <p>Improved Homework Feedback Satisfaction by <strong>38.4%</strong> and Overall Program Satisfaction by <strong>18.5%</strong>.</p>
+                <p><i>*Due to NDAs, I am limited in what I can show regarding these projects. Please reach out to discuss my contributions to these projects in greater detail.</i></p>
 
               </div>
             </div>
