--- a/oracle.html
+++ b/oracle.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Chegg Skills</title>
+  <title>Oracle Cloud Infrastructure</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
