--- a/index.html
+++ b/index.html
@@ -79,13 +79,22 @@
               <img class="img-fluid" src="assets/img/oracle.png">
             </a>
           </div>
+          <div class="item teach col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="chegg.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Chegg UX Boot Camp</h3>
+                <span>UX Mentor</span>
+              </div>
+              <img class="img-fluid" src="assets/img/chegg.png">
+            </a>
+          </div>
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="dh.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>DataHub 2.0</h3>
                 <span>Application Design</span>
               </div>
-              <img class="img-fluid" src="assets/img/img-dh.png">
+              <img class="img-fluid" src="assets/img/txgis.png">
             </a>
           </div>
           <div class="item teach col-sm-6 col-md-4 col-lg-4 mb-4">
