--- a/dh.html
+++ b/dh.html
@@ -46,7 +46,7 @@
           <div class="col-md-6" data-aos="fade-up">
             <h2>TX Natural Resources Info System</h2>
             <h4>UX Designer</h4>
-            <p>September 2020 - Present </p>
+            <p>September 2020 - September 2021 </p>
           </div>
         </div>
       </div>
