--- a/gt.html
+++ b/gt.html
@@ -46,7 +46,7 @@
           <div class="col-md-6" data-aos="fade-up">
             <h2>Georgia Institute of Technology</h2>
             <h4>UX/UI Boot Camp Instructional Staff</h4>
-            <p>May 2020 - Present </p>
+            <p>May 2020 - Jan 2022 </p>
           </div>
         </div>
       </div>
