--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="dh.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>DataHub 2.0</h3>
+                <h3>Texas GIS DataHub 2.0</h3>
                 <span>Application Design</span>
               </div>
               <img class="img-fluid" src="assets/img/txgis.png">
