--- a/chegg.html
+++ b/chegg.html
@@ -60,7 +60,7 @@
                 
             <div class="col-md-4 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
-                <h3 class="h3">Mentor for 6-motnh immersive program preparing students for a career in UX/UI</h3>
+                <h3 class="h3">Mentor for 6-month immersive program preparing students for a career in UX/UI</h3>
 
                 <div class="mb-6">
                     <p>What I did: </p>
