--- a/oracle.html
+++ b/oracle.html
@@ -66,7 +66,14 @@
                   </div>
 
                 <ul class="list-unstyled list-line mb-6">
-                  <li>18 service projects, including net-new services and feature enhancements (15 shipped to production)
+                  <li>18 service projects, including net-new services and feature enhancements (15 shipped to production), such as:</li>
+                    <ul>
+                      <li>IP Address Management</li>
+                      <li>VCN Flow Logs</li>
+                      <li>FastConnect</li>
+                      <li>Compute Instance</li>
+                      <li>Identity and Access Management</li>
+                    </ul>
                   <li>2 Internal tools for education and planning</li>
                   <li>Creation of new design system from the ground up</li>
                   <li>Competitive analysis of top cloud platforms</li>
